--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -19,10 +19,13 @@
 
   </header>
   <div class="tab">
-    <button>Account</button>
-    <button>Password</button>
-    <button>About this App</button>
-    <button>Help</button>
+    <button><a href="index.html">About this App</a></button>
+    <button><a href="#">Account</a></button>
+    <button><a href="#">Password</a></button>
+    
+    <button><a href="help.html">Help</a></button>
+    <button><a href="#">Apply</a></button>
+    <button><a href="post.html">Create/Post</a></button>
 
   </div>
 
