--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -60,7 +60,7 @@
         <label for="email"><b>Email</b></label>
         <input type="text" placeholder="Enter Email" name="email" th:field="*{volunteerEmail}" required>
         <label for="email"><b>Username</b></label>
-        <input type="text" placeholder="Enter Email" name="email" th:field="*{volunteerUser}" required>
+        <input type="text" placeholder="Enter Username" name="user" th:field="*{volunteerUser}" required>
 
         <label for="psw"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="psw1" th:field="*{volunteerPass}" required>
