--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xml:th="http://www.tymeleaf.org">
 <head>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="Index.css">
   <script>
     function openForm() {
       document.getElementById("myForm1").style.display = "block";
