--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -19,7 +19,7 @@
 
   </header>
   <div class="tab">
-    <button><a href="index.html">About this App</a></button>
+    <button><a href="Index.html">About this App</a></button>
     <button><a href="#">Account</a></button>
     <button><a href="#">Password</a></button>
     
