--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xml:th="http://www.tymeleaf.org">
+<html xml:th="http://www.thymeleaf.org">
 <head>
   <link rel="stylesheet" href="Index.css">
   <script>
