--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -40,11 +40,11 @@
     <div class="form-popup" id="myForm1">
       <form action="#" th:action="@{/saveVolunteer}" th:object="${volunteer}"method="GET" class="form-container">
 
-        <label for="email"><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" name="email" th:field="*{volunteerEmail}" required>
+        <label for="logemail"><b>Email</b></label>
+        <input type="text" placeholder="Enter Email" id="logemail" th:field="*{volunteerEmail}" required>
 
         <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" th:field="*{volunteerPass}" required>
+        <input type="password" placeholder="Enter Password" id="psw" th:field="*{volunteerPass}" required>
 
         <button type="submit" class="btn">Login</button>
         <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
@@ -58,14 +58,14 @@
 
 
         <label for="email"><b>Email</b></label>
-        <input type="text" placeholder="Enter Email" name="email" th:field="*{volunteerEmail}" required>
-        <label for="email"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="user" th:field="*{volunteerUser}" required>
+        <input type="text" placeholder="Enter Email" id="email" th:field="*{volunteerEmail}" required>
+        <label for="user"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" id="user" th:field="*{volunteerUser}" required>
 
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw1" th:field="*{volunteerPass}" required>
-        <label for="psw"><b>Re-enter Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw2" th:field="*{volunteerPass}" required>
+        <label for="psw1"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" id="psw1" th:field="*{volunteerPass}" required>
+        <label for="psw2"><b>Re-enter Password</b></label>
+        <input type="password" placeholder="Enter Password" id="psw2" th:field="*{volunteerPass}" required>
 
         <button type="submit" class="btn" value="0">Create Account</button>
         <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
