fixed an issue with Index

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -11,6 +11,7 @@
       document.getElementById("myForm").style.display = "none";
     }
   </script>
+  <title>Voluntier</title>
 </head>
 <body>
 <div class="content">
