--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org" lang="en-US">
 <head>
   <title>Voluntier</title>
   <link rel="stylesheet" href="@{css/Index.css}">
