My code review changes

--- a/src/main/resources/templates/fragments/help.html
+++ b/src/main/resources/templates/fragments/help.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html xml:th="http://www.tymeleaf.org">
+<html xmlns:th="http://www.tymeleaf.org" lang=""en-US">
 <head>
+  <title>Voluntier</title>
   <link rel="stylesheet" href="index.css">
   <script>
     function openForm() {
@@ -15,7 +16,7 @@
 <body>
 <div class="content">
   <header>
-    <img src="images.png" alt="Logo">
+    <img src="../../static/images/images.png" alt="Logo">
 
   </header>
   <div class="tab">
@@ -29,11 +30,11 @@
 
   </div>
 
-  
+
 
     <p th:text="${volunteer}">
-    
-  
+
+
 
 
 </div>
