--- a/src/main/resources/templates/fragments/Index.html
+++ b/src/main/resources/templates/fragments/Index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html xml:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en-US>
 <head>
-  <link rel="stylesheet" href="index.css">
+  <title>Voluntier</title>
+  <link rel="stylesheet" th:href="@{css/Index.css}">
   <script>
     function openForm() {
       document.getElementById("myForm1").style.display = "block";
@@ -15,7 +16,7 @@
 <body>
 <div class="content">
   <header>
-    <img src="images.png" alt="Logo">
+    <img src="../../static/images/images.png" alt="Logo">
 
   </header>
   <div class="tab">
@@ -36,8 +37,8 @@
     <p th:text="${volunteer}">
 
 
-
     <div class="form-popup" id="myForm1">
+      <!--/*@thymesVar id="volunteer" type=""*/-->
       <form action="#" th:action="@{/saveVolunteer}" th:object="${volunteer}"method="GET" class="form-container">
 
         <label for="email"><b>Email</b></label>
