--- a/src/main/resources/templates/fragments/company.html
+++ b/src/main/resources/templates/fragments/company.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html xml:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en-US">
 <head>
+  <title>Voluntier </title>
   <link rel="stylesheet" href="index.css">
   <script>
     function openForm() {
@@ -15,7 +16,7 @@
 <body>
 <div class="content">
   <header>
-    <img src="images.png" alt="Logo">
+    <img src="../../static/images/images.png" alt="Logo">
 
   </header>
 
