--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -22,6 +22,17 @@
   <header>
     <img th:src="@{/images/images.png}" alt="Logo">
   </header>
+  
+    <div class="tab">
+    <button><a href="/">About this App</a></button>
+    <button><a href="#">Account</a></button>
+    <button><a href="#">Password</a></button>
+
+    <button><a href="help">Help</a></button>
+    <button><a href="#">Apply</a></button>
+    <button><a href="post">Create/Post</a></button>
+  </div>
+
 
   <div class="login">
     <p th:text="${company}"></p>
