--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en-US">
 <head>
+    <meta charset="utf-8"/>
     <link rel="stylesheet" th:href="@{css/Index.css}">
     <title>Volunteer</title>
 </head>
