--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -20,7 +20,11 @@
     <button><a href="post">Create/Post</a></button>
   </div>
 
-Welcome to the Volunteer App - Post.html
+Are you looking for a job, or looking for people to work at your company?
     </div>
+  <div class="answer">
+    <button><a href="applicant.html">Looking for a job</a></button>
+    <button><a href="company.html">Looking for volunteers</a></button>
+  </div>
 </body>
 </html>
