--- a/src/main/resources/templates/applicant.html
+++ b/src/main/resources/templates/applicant.html
@@ -34,7 +34,7 @@
 
 
   <div class="information">
-    <p th:text="${company}"></p>
+    <p th:text="${applicant}"></p>
 
     <div class="form-popup" id="myForm1">
       <form action="#" th:action="@{/saveApplicant}" th:object="${applicant}" method="GET" class="form-container">
