--- a/src/main/resources/templates/allposts.html
+++ b/src/main/resources/templates/allposts.html
@@ -32,6 +32,11 @@
     <button><a href="help">Help</a></button>
     <button><a href="post">Create/Post</a></button>
   </div>
+  <br>
+  <br>
+  <div id="company"></div>
+  <br>
+  <div id="applicant"></div>
     </div>
 </body>
 </html>
