--- a/src/main/resources/templates/allposts.html
+++ b/src/main/resources/templates/allposts.html
@@ -31,6 +31,7 @@
 
     <button><a href="help">Help</a></button>
     <button><a href="post">Create/Post</a></button>
+    <button><a href="allposts.html">View Posts</a></button>
   </div>
   <br>
   <br>
