--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -27,7 +27,7 @@
 
     <button><a href="help.html">Help</a></button>
     <button><a href="post.html">Create/Post</a></button>
-
+    <button><a href="allposts.html">View Posts</a></button>
   </div>
 
  <!-- <p th:text="${volunteer}"></p>    -->
