--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -18,6 +18,7 @@
 
     <button><a href="help">Help</a></button>
     <button><a href="post">Create/Post</a></button>
+    <button><a href="allposts.html">View Posts</a></button>
   </div>
 
 Are you looking for a job, or looking for people to work at your company?
