--- a/src/main/resources/templates/allposts.html
+++ b/src/main/resources/templates/allposts.html
@@ -35,9 +35,9 @@
   </div>
   <br>
   <br>
-  <div id="company"></div>
+  document.getElementById("company").value
   <br>
-  <div id="applicant"></div>
+  document.getElementById("applicant").value
     </div>
 </body>
 </html>
